Fixing overflow issue

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 100%;
 
   @include large {
-    grid-template-columns: 35% 75%;
+    grid-template-columns: 25% 75%;
   }
 
   &--logo {
